Refactor: getWords
서비스 변경으로 인한 쿼리 변경
