# back/src/config/swagger-output.json
@@ -138,9 +138,6 @@
                   },
                   "nickname": {
                     "example": "any"
-                  },
-                  "score": {
-                    "example": "any"
                   }
                 }
               }
@@ -234,24 +231,10 @@
           "Study"
         ],
         "summary": "단어 학습",
-        "description": "쿼리별 단어 학습. 틀린 단어, 학습한 단어, 개인 단어장 단어, 쿼리가 없다면 전체 데이터셋 중 학습한적 없는 단어",
+        "description": "쿼리별 단어 학습. 틀린 단어, 학습한(맞춘) 단어, 개인 단어장 단어, 수능 토익 토플 IELTS 등. 쿼리가 없다면 전체 데이터셋 중 학습한적 없는 단어. 원하는 항목을 쿼리스트링으로 true",
         "parameters": [
           {
             "name": "customBookId",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "isWrongAnswerBook",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "isStudiedBook",
             "in": "query",
             "schema": {
               "type": "string"
