# back/src/controllers/authController.ts
@@ -73,17 +73,12 @@ export const createUser = async (req: Request, res: Response, next: NextFunction
    * #swagger.summary = '회원가입'
    */
   try {
-    const { email, password, name, nickname, score } = req.body;
+    const { email, password, name, nickname } = req.body;
     const { emailExists, nicknameExists } = await authService.signUpDuplicateCheck(email, nickname);
 
     if (emailExists) return res.status(409).json({ message: "이미 존재하는 이메일입니다." });
     if (nicknameExists) return res.status(409).json({ message: "이미 존재하는 닉네임입니다." });
-    let level: number = 0;
-    if (score >= 71) {
-      level = 2;
-    } else if (score >= 41) {
-      level = 1;
-    }
+
     const hashedPassword = await bcrypt.hash(password, 10);
     const newUser = await authService.createUser({
       email,
